# Django-Fan-Club

./: README.md  pyproject.toml
app/: admin.py  exceptions.py  serializers.py  signals.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/models/: award.py  challenge.py  user.py
prj/: settings.py  urls.py
